# rinha-de-backend-2024-q1-python-fastAPI

./: makefile  pyproject.toml
rinha_de_backend/: database.py  exceptions.py  main.py  models.py  routes.py  schemas.py  services.py
